feat: delete swagger
