# docs/swagger.json
@@ -9,6 +9,70 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
+        "/file/delete/{bucket}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "specify the object's bucket and key to delete",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Delete object from minio",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Which bucket to delete object",
+                        "name": "bucket",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "object key to delete",
+                        "name": "fileKey",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteFileRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteFileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.AppError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apperrors.AppError"
+                        }
+                    }
+                }
+            }
+        },
         "/file/get/{bucket}": {
             "get": {
                 "security": [
@@ -143,6 +207,27 @@
                 },
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.DeleteFileRequestBody": {
+            "type": "object",
+            "required": [
+                "fileKey"
+            ],
+            "properties": {
+                "fileKey": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
+                }
+            }
+        },
+        "dto.DeleteFileResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
